add loading spinner

--- a/app/views/component.html
+++ b/app/views/component.html
@@ -31,6 +31,10 @@
 
 <div class="container-wrapper">
 
+    <div class="text-center text-muted" ng-if="loading">
+        <i class="fa fa-spin fa-3x fa-spinner"></i>
+    </div>
+
     <div class="container container-narrow">
 
         <div class="panel panel-default panel-widget" ng-if="component.description">
