--- a/app/views/goal.html
+++ b/app/views/goal.html
@@ -13,6 +13,11 @@
 </div>
 
 <div class="container-fluid">
+
+    <div class="text-center text-muted" ng-if="loading">
+        <i style="color: {{ goal.extras.color_primary || 'inherit' }}" class="fa fa-spin fa-3x fa-spinner"></i>
+    </div>
+
     <div class="row">
         <div ng-if="targets.results" class="col-sm-3 col-no-pad pane-left">
             <div>
