--- a/app/views/indicator.html
+++ b/app/views/indicator.html
@@ -51,6 +51,17 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="text-right">
+                            <span ng-if="!_indicator.progress_count"  class="label label-warning" translate>
+                                No statistics yet
+                            </span>
+                            <a class="btn btn-default btn-xs"
+                                    ng-href="/indicators/{{ _indicator.id }}/{{ _indicator.slug }}"
+                                    style="color: {{ goal.extras.color_primary }}">
+                                <i class="fa fa-line-chart"></i>
+                                    <translate>View</translate>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
