--- a/app/views/search.html
+++ b/app/views/search.html
@@ -66,14 +66,13 @@
                                             <div>
                                                 {{ result.description }}
                                             </div>
-                                        </div>
-                                    </div>
-                                    <div>
-                                        <div ng-switch="indicator.stats_available" class="pull-right">
-                                          <div ng-switch-when="YES" class="label label-success"><i class="fa fa-line-chart"></i> <translate>Statistics available</translate></div>
-                                          <div ng-switch-when="PARTIALLY" class="label label-warning"><i class="fa fa-line-chart"></i> <translate>Some of statistics available</translate></div>
-                                          <div ng-switch-when="NO" class="label label-danger"><i class="fa fa-line-chart"></i> <translate>Statistics not available</translate></div>
-                                          <div ng-switch-when="UNKNOWN" class="label label-default"><i class="fa fa-line-chart"></i> <translate>Statistics availability: Unkonwn</translate></div>
+                                            <div class="text-right">
+                                                <span class="label label-warning" ng-if="
+                                                        (result.object_type == INDICATOR || result.object_type == COMPONENT) &&
+                                                        !result.progress_count" translate>
+                                                    No statistics yet
+                                                </span>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
