--- a/app/views/target.html
+++ b/app/views/target.html
@@ -61,7 +61,7 @@
                                     <img class="sdg-img" ng-src="{{ goal.image_small }}">
                                 </a>
                             </div>
-                            <div class="col-xs-10" style="vertical-align: middle">
+                            <div class="col-xs-10">
                                 <a class="text-default" ng-href="/goals/{{ goal.id }}/{{ goal.slug }}">
                                     {{ goal.description }}
                                 </a>
