--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -152,6 +152,10 @@ a:focus {
     margin-top: 20px;
 }
 
+.page-header.page-header-md{
+   margin: 10px 5px 20px;
+}
+
 .page-header-dg {
     display: block;
     min-height: 150px;
@@ -168,6 +172,7 @@ a:focus {
 .page-header-dg .subtitle {
     color: rgba(0, 0, 0, 0.5);
 }
+
 .page-header-img{}
 
 .page-info{
