--- a/app/views/goal.html
+++ b/app/views/goal.html
@@ -51,8 +51,8 @@
         <div class="col-sm-9 col-no-pad" ng-if="indicators.results">
             <div class="container-wrapper">
                 <div class="container-fluid">
-                    <div class="listing">
-                        <div class="page-header">
+                    <div class="">
+                        <div class="page-header page-header-md">
                             <h2 class="text-uppercase" translate>
                                 <span class="text-muted" ng-bind="indicators.results.length"></span>
                                 Indicators
