--- a/app/views/target.html
+++ b/app/views/target.html
@@ -67,7 +67,7 @@
                                 </a>
                             </div>
                         </div>
-                        <div class="page-header">
+                        <div class="page-header page-header-md">
                             <h2 class="text-uppercase" translate>
                                 <span class="text-muted" ng-bind="indicators.results.length"></span>
                                 Indicators
