add progress preview on indicators list

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -202,13 +202,19 @@ a:focus {
 .box-md{
     height: 250px;
     display: block;
-    padding-left: 10px;
-    padding-right: 10px;
+    background-color: $jumbotron-bg;
 }
 
 .box-md-header{
     max-height: 60%;
     display: block;
+    background-color: $panel-bg;
+}
+
+.box-md-header.page-header.page-header-md{
+   margin: 10px 0px 20px;
+   padding-left: 5px;
+   padding-right: 5px;
 }
 
 .text-default,
@@ -216,6 +222,9 @@ a:focus {
 .text-default:focus {
     color: $text-color;
     text-decoration: none;
+}
+.text-transparent{
+    opacity: 0.5
 }
 .btn.btn-spaced {
     margin: 5px;
