--- a/app/views/indicator.html
+++ b/app/views/indicator.html
@@ -177,7 +177,7 @@
                                                 ng-href="/components/{{ component.id }}/{{ component.slug }}">
                                             <i class="fa fa-eye"></i> <span translate>More details</span>
                                         </a>
-                                        <a class="btn btn-primary"
+                                        <a class="btn btn-primary" target="_self"
                                                 ng-href="{{ settings.API_ROOT_URL }}/progress?component={{ component.id }}&area_type={{ areaType }}&format=csv">
                                             <i class="fa fa-download"></i> <span translate>Download data</span>
                                         </a>
