--- a/app/views/plan.html
+++ b/app/views/plan.html
@@ -27,13 +27,11 @@
             </h2>
             <div class="row">
                 <div ng-repeat="theme in themes.results" class="col-sm-3 col-no-pad goal-box">
-                    <div class="goal-box-container">
+                    <a class="goal-box-container" ng-href="/themes/{{ theme.id }}/{{ theme.slug }}">
                         <div class="goal-box-body">
-                            <a ng-href="">
-                                <h3 class="text-center">{{ theme.name }}</h3>
-                            </a>
+                            <h3 class="text-center">{{ theme.name }}</h3>
                         </div>
-                    </div>
+                    </a>
                 </div>
             </div>
         </div>
