--- a/app/views/theme.html
+++ b/app/views/theme.html
@@ -1,12 +1,21 @@
-<div class="page-header-dg themed" style="background: {{ goal.extras.color_primary }}">
+<div class="page-header-dg" style="background: {{ goal.extras.color_primary }}">
     <div class="container">
         <div class="row">
-            <div class="col-md-2">
-                <img class="sdg-img" ng-src="{{ goal.image_medium }}">
+            <div ng-if="theme.image_medium" class="col-sm-2 text-center">
+                <img  class="img-responsive" ng-src="{{ theme.image_medium }}">
+            </div>
+            <div ng-if="!theme.image_medium" class="col-sm-2 text-center">
+                <div class="jumbotron jumbotron-no-pad">
+                    <h3 class="text-uppercase text-muted" translate>Theme</h3>
+                    <h1>{{ theme.code }}</h1>
+                </div>
             </div>
             <div class="col-md-8">
-                <h4><a class="subtitle" ng-href="/">{{ goal.plan_name }}</a></h4>
-                <h1>{{ goal.description }}</h1>
+                <h4 ng-if="theme.plans_names.length">
+                    <a class="subtitle" ng-href="/"><span class="text-info">{{ theme.plans_names.join(', ') }}</span></a>
+                </h4>
+                <h1><strong>{{ theme.name }}</strong></h1>
+                <div ng-if="theme.caption" class="lead text-muted">{{ theme.caption }}</div>
             </div>
         </div>
     </div>
@@ -19,27 +28,26 @@
     </div>
 
     <div class="row">
-        <div ng-if="targets.results" class="col-sm-3 col-no-pad pane-left">
+        <div ng-if="sectors.results" class="col-sm-3 col-no-pad pane-left">
             <div>
                 <div>
                     <div class="page-header">
                         <h4 class="text-center text-uppercase" style="color: {{ goal.extras.color_primary }}" translate>
-                            <span class="text-muted" ng-bind="targets.results.length"></span>
-                            Targets
+                            Sectors
                         </h4>
                     </div>
 
-                    <div ng-repeat="target in targets.results" class="pane-li">
+                    <div ng-repeat="sector in sectors.results" class="pane-li">
                         <div class="row">
-                            <div class="col-xs-2 text-center">
+                            <div class="col-xs-2 col-xs-offset-{{ sector.level }} text-center">
                                 <a style="color:{{ goal.extras.color_primary }}"
-                                        ng-href="/targets/{{ target.id }}/{{ target.slug }}">
-                                    <strong>{{ target.code }}</strong>
+                                        ng-href="">
+                                    <strong>{{ sector.code }}</strong>
                                 </a>
                             </div>
-                            <div class="col-xs-10">
+                            <div class="col-xs-{{ 10 - sector.level }}">
                                 <div>
-                                    <a class="text-default" ng-href="/targets/{{ target.id }}/{{ target.slug }}">{{ target.name }}</a>
+                                    <a class="text-default" ng-href="">{{ sector.name }}</a>
                                 </div>
                             </div>
                         </div>
